fix: 针对本次更新内容进行一些调整，更改版本号到v3.1.7